crates/parser/src/snapshots/parser__tests__parse_inline_ok@0062_named_assume_multi_part.ath.snap
---
source: crates/parser/src/tests.rs
description: "assume A := (!claim B); C := D (!claim A)\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0062_named_assume_multi_part.ath
---
NAMED_ASSUME_DED
  ASSUME_KW "assume"
  WHITESPACE " "
  ASSUME_PART
    NAME
      IDENT "A"
    WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    DED_PHRASE
      BANG_METHOD_CALL_DED
        L_PAREN "("
        BANG "!"
        IDENT_EXPR
          NAME_REF
            IDENT "claim"
        WHITESPACE " "
        EXPR_PHRASE
          IDENT_EXPR
            NAME_REF
              IDENT "B"
        R_PAREN ")"
  ASSUME_PART
    SEMI ";"
    WHITESPACE " "
    NAME
      IDENT "C"
    WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "D"
  WHITESPACE " "
  BANG_METHOD_CALL_DED
    L_PAREN "("
    BANG "!"
    IDENT_EXPR
      NAME_REF
        IDENT "claim"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "A"
    R_PAREN ")"
  WHITESPACE "\n"

