crates/parser/src/snapshots/parser__tests__parse_inline_ok@0063_match_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "match A { B => (!claim C) }\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0063_match_ded.ath
---
INFIX_MATCH_DED
  MATCH_KW "match"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      NAME_REF
        IDENT "A"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  MATCH_DED_ARM
    IDENT_PAT
      NAME
        IDENT "B"
    WHITESPACE " "
    FAT_ARROW "=>"
    WHITESPACE " "
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        NAME_REF
          IDENT "claim"
      WHITESPACE " "
      EXPR_PHRASE
        IDENT_EXPR
          NAME_REF
            IDENT "C"
      R_PAREN ")"
  WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"

