crates/parser/src/snapshots/parser__tests__parse_inline_ok@0068_proof_by_contra_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "suppose-absurd A (!claim A)\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0068_proof_by_contra_ded.ath
---
PROOF_BY_CONTRA_DED
  SUPPOSE_ABSURD_KW "suppose-absurd"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      NAME_REF
        IDENT "A"
  WHITESPACE " "
  BANG_METHOD_CALL_DED
    L_PAREN "("
    BANG "!"
    IDENT_EXPR
      NAME_REF
        IDENT "claim"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "A"
    R_PAREN ")"
  WHITESPACE "\n"

