crates/parser/src/snapshots/parser__tests__parse_inline_ok@0070_generalize_over_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "generalize-over A (!claim A)\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0070_generalize_over_ded.ath
---
GENERALIZE_OVER_DED
  GENERALIZE_OVER_KW "generalize-over"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "A"
  WHITESPACE " "
  BANG_METHOD_CALL_DED
    L_PAREN "("
    BANG "!"
    IDENT_EXPR
      NAME_REF
        IDENT "claim"
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "A"
    R_PAREN ")"
  WHITESPACE "\n"

